Revert "Replace YouTube with Vimeo for video presentations"
This reverts commit a94987f2be7d0dd49bf51c7c93b10babca9c46e2.

--- a/frontend/src/locales/he.json
+++ b/frontend/src/locales/he.json
@@ -426,11 +426,11 @@
     "bible": "תנ\"ך",
     "media": "מדיה",
     "addToSetlist": "הוסף לרשימה",
-    "vimeo": "Vimeo",
-    "vimeoVideo": "סרטון Vimeo",
-    "enterVimeoUrl": "הזן כתובת Vimeo...",
-    "noVimeoVideos": "לא נוספו סרטונים",
-    "invalidVimeoUrl": "כתובת Vimeo לא תקינה",
+    "youtube": "יוטיוב",
+    "youtubeVideo": "סרטון יוטיוב",
+    "enterYoutubeUrl": "הזן כתובת יוטיוב...",
+    "noYoutubeVideos": "לא נוספו סרטונים",
+    "invalidYoutubeUrl": "כתובת יוטיוב לא תקינה",
     "present": "הצג",
     "stop": "עצור",
     "cloudMedia": "ענן",
