--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -426,11 +426,11 @@
     "bible": "Bible",
     "media": "Media",
     "addToSetlist": "Add to Setlist",
-    "vimeo": "Vimeo",
-    "vimeoVideo": "Vimeo Video",
-    "enterVimeoUrl": "Enter Vimeo URL...",
-    "noVimeoVideos": "No Vimeo videos added",
-    "invalidVimeoUrl": "Invalid Vimeo URL",
+    "youtube": "YouTube",
+    "youtubeVideo": "YouTube Video",
+    "enterYoutubeUrl": "Enter YouTube URL...",
+    "noYoutubeVideos": "No YouTube videos added",
+    "invalidYoutubeUrl": "Invalid YouTube URL",
     "present": "Present",
     "stop": "Stop",
     "cloudMedia": "Cloud",
